former-apps/couchdb/couchdb-ext-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: couchdb-ext
  labels:
    authentified: "true"
    type: external
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - couchdb.former-hostname.com
      secretName: couchdb.former-hostname.com
  rules:
    - host: couchdb.former-hostname.com
      http:
        paths:
          - backend:
              service:
                name: couchdb
                port:
                  number: 5984
            path: /
            pathType: Prefix
