former-apps/couchdb/couchdb-local-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: couchdb-local
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    type: local
spec:
  rules:
    - host: couchdb.local
      http:
        paths:
          - backend:
              service:
                name: couchdb
                port:
                  number: 5984
            path: /
            pathType: Prefix
